--- a/fpm.toml
+++ b/fpm.toml
@@ -9,6 +9,7 @@ auto-executables = true
 auto-tests = true
 auto-examples = true
 module-naming = false
+external-modules = ["cudafor", "curand"]
 [install]
 library = false
 [fortran]
