--- a/fpm.toml
+++ b/fpm.toml
@@ -23,3 +23,7 @@ source-form = "free"
 name = "ising2d_gpu_relaxation"
 source-dir = "app"
 main = "ising2d_gpu_relaxation.f90"
+[[executable]]
+name = "xy2d_gpu_relaxation"
+source-dir = "app"
+main = "xy2d_gpu_relaxation.f90"
