Add clock model simulated by GPU.
	new file:   app/clock_gpu_relaxation.f90
	modified:   fpm.toml
	new file:   fpm_run_clock.sh
	new file:   src/clock_gpu_m.f90

--- a/fpm.toml
+++ b/fpm.toml
@@ -27,3 +27,7 @@ main = "ising2d_gpu_relaxation.f90"
 name = "xy2d_gpu_relaxation"
 source-dir = "app"
 main = "xy2d_gpu_relaxation.f90"
+[[executable]]
+name = "clock_gpu_relaxation"
+source-dir = "app"
+main = "clock_gpu_relaxation.f90"
