--- a/fpm.toml
+++ b/fpm.toml
@@ -31,3 +31,7 @@ main = "xy2d_gpu_relaxation.f90"
 name = "clock_gpu_relaxation"
 source-dir = "app"
 main = "clock_gpu_relaxation.f90"
+[[executable]]
+name = "clock_gpu_multi_relaxation"
+source-dir = "app"
+main = "clock_gpu_multi_relaxation.f90"
